Refactors in StudentService